--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
+    "jquery": "^3.4.1",
     "mint-ui": "^2.2.13",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.3",
