--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-recyclerview": "^0.4.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
